--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -7,3 +7,12 @@
   border: 2px solid #fff;
   border-radius: 6px;
 }
+
+/* 처음에 카드를 안보이게 뒤집어 놓는다.*/
+.card .front {
+  transform: rotateY(90deg);
+  position: absolute;
+}
+.flipped .front {
+  transform: rotateY(0deg);
+}
